[package]
name = "rlpcli"
version = "1.1.1"
edition = "2021"
description = "Tiny LessPass API server client CLI to get passwords and site settings"
readme = "README.md"
repository = "https://gitlab.com/ogarcia/rlpcli"
license = "GPL-3.0-or-later"
keywords = ["lesspass", "rockpass", "password", "client", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.4", features = ["cargo"] }
env_logger = "0.11.3"
lesspass = "0.4.0"
log = "0.4.21"
serde = { version = "1.0.202", features = ["derive"] }
ureq = { version = "2.9.7", features = ["json"] }
url = "2.5.0"
xdg = "2.5.2"

[dev-dependencies]
mockito = "1.4.0"
