[package]
name = "rlpcli"
version = "1.3.3"
edition = "2021"
description = "Tiny LessPass API server client CLI to get passwords and site settings"
readme = "README.md"
repository = "https://gitlab.com/ogarcia/rlpcli"
license = "GPL-3.0-or-later"
keywords = ["lesspass", "rockpass", "password", "client", "cli"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.5.37", features = ["cargo"] }
env_logger = "0.11.8"
lesspass = "0.5.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
ureq = { version = "3.0.11", features = ["json"] }
url = "2.5.4"
xdg = "2.6.0"

[dev-dependencies]
mockito = "1.7.0"
